Modified the DU startup code to work with stock ice driver

--- a/du_startup/.env
+++ b/du_startup/.env
@@ -2,6 +2,7 @@
 CORE=SDCORE
 FH_NIC_BUS_ID=01:00.0
 FH_INTERFACE=enp1s0f0
-FH_MAC=00:11:22:33:44:66
+FH_MAC_1=00:11:22:33:44:66
+FH_MAC_2=00:11:22:33:44:77
 FH_CU_VLAN=1 #set VLAN as 0 if no VLAN is required. 
 FH_MTU=9600
